--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
     implementation "io.insert-koin:koin-android:3.2.0"
+    implementation "io.coil-kt:coil-compose:2.1.0"
+    implementation 'com.valentinilk.shimmer:compose-shimmer:1.0.3'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
