--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
 }
 
 dependencies {
+    def koin_version = "3.2.0"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -56,11 +57,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
-    implementation "io.insert-koin:koin-android:3.2.0"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
     implementation "io.coil-kt:coil-compose:2.1.0"
     implementation 'com.valentinilk.shimmer:compose-shimmer:1.0.3'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation "androidx.navigation:navigation-compose:2.4.2"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.24.10-beta"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -71,5 +75,6 @@ dependencies {
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += '-Xopt-in=androidx.compose.material3.ExperimentalMaterial3Api'
+        freeCompilerArgs += '-Xopt-in=androidx.compose.animation.ExperimentalAnimationApi'
     }
 }
